# dbt_northwind

./: LICENSE  README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: analise_clientes_para_marketing.sql  analise_crescimento_mensal.sql  analise_receita_1997.sql  analise_receita_total_por_grupo_de_clientes.sql  analise_uk_clientes_ltv_maior_1000.sql  vendas.sql
northwind/models/marts/ecommerce/: analise_ltv.sql  analise_top_10_produtos.sql
northwind/models/raw/ecommerce/: raw_ecommerce__customer_demographics.sql  raw_ecommerce__employee_territories.sql  raw_ecommerce__nova_tabela.sql  raw_ecommerce__order_details.sql  raw_ecommerce__region.sql  raw_ecommerce__shippers.sql  raw_ecommerce__suppliers.sql  raw_ecommerce__territories.sql  raw_ecommerce__us_states.sql
northwind/models/staging/ecommerce/: _stg_ecommerce__models.yml  _stg_ecommerce__sources.yml  stg_ecommerce__customers.sql  stg_ecommerce__nova_tabela.sql  stg_ecommerce__order_details.sql  stg_ecommerce__orders.sql  stg_ecommerce__products.sql
northwind/seeds/: nova_tabela.csv  region.csv
