[project]
name = "dbt-northwind"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Barletta",email = "jonasbarletta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.9.2,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
